--- a/demos/smart-retail/02.query_with_ezpreso.ipynb
+++ b/demos/smart-retail/02.query_with_ezpreso.ipynb
@@ -65,9 +65,9 @@
     "\n",
     "In this section, you will learn how to make a data connection using the Delta Tables you created in Exercise 1. \n",
     "\n",
-    "### Connect Delta Tables as Data Source using Hive.\n",
+    "### Connect Delta Tables as Data Source using Apache Hive.\n",
     "\n",
-    "Let's take those Delta Tables you created in Exercise 1 and make them available to other applications in Unified Analytics by making them a **Data Source**. This will allow you to use EzPresto to turn them into datasets later in the exercise. "
+    "Let's take those Delta Tables you created in Exercise 1 and make them available to other applications in Unified Analytics by connecting them as an Apache Hive **Data Source**. Apache Hive gives an SQL-like interface to query data stored in various databases and file systems, like the delta tables you created in Exercise 1. This will allow you to use EzPresto to turn them into datasets later in the exercise. "
    ]
   },
   {
@@ -321,12 +321,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fb82bf08-370c-4d5f-b866-e34c1c28623e",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "141497a06d85475482a08d76da0e901b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n    <table style=\"border-collapse: collapse; border: 1px solid black; width: 100%;\">\\n        <t…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# The %commands command lists the magic commands and SDKs that are customized by Hewlett Packard Enterprise and are available in this notebook.\n",
     "%commands"
