--- a/demos/smart-retail/05.working_in_mlflow.ipynb
+++ b/demos/smart-retail/05.working_in_mlflow.ipynb
@@ -651,7 +651,7 @@
     "\n",
     "Lastly, you learned how to pull a model from the saved artifacts associated a model in the registry using the model's MLflow URI.\n",
     "\n",
-    "In the next exercise, you will use that URI to **serve** the latest version of your model from the repository using **Kserve** - making it callable from your own retail application!\n",
+    "In the next exercise, you will use that URI to **serve** the latest version of your model from the repository using **KServe** - making it callable from your own retail application!\n",
     "\n",
     "For more on managing models in the MLflow Model Registry, see the offical <a href=\"https://mlflow.org/docs/latest/model-registry.html\">MLflow documentation </a>. "
    ]
