--- a/demos/smart-retail/06.serve_model_kserve.ipynb
+++ b/demos/smart-retail/06.serve_model_kserve.ipynb
@@ -17,13 +17,13 @@
     "tags": []
    },
    "source": [
-    "# **Exercise 6:** Serving your model with Kserve\n",
+    "# **Exercise 6:** Serving your model with KServe\n",
     "\n",
     "By this stage, you have a model that is saved in a Model Regsitry as a 'Production' model. Now, it's time to make this model available to every self-serve checkout in every one of our retail stores.\n",
     "\n",
     "In this exercise, you will:\n",
     "\n",
-    "- Be briefly introduced to containers, Kubernetes, Kubeflow and Kserve.\n",
+    "- Be briefly introduced to containers, Kubernetes, Kubeflow and KServe.\n",
     "- Create an InferenceService configuration.\n",
     "- Serve the model through an InferenceService using KServe.\n",
     "- Learn how to manage Kubeflow Endpoints.\n",
@@ -63,7 +63,7 @@
     "tags": []
    },
    "source": [
-    "## **1. Introduction to Kubeflow and Kserve**"
+    "## **1. Introduction to Kubeflow and KServe**"
    ]
   },
   {
@@ -106,7 +106,7 @@
     "tags": []
    },
    "source": [
-    "### What is Kserve?"
+    "### What is KServe?"
    ]
   },
   {
@@ -120,7 +120,7 @@
     "\n",
     "KServe is **incredibly powerful** for model inferencing, as it can scale your model serving instances up or down based on real-time traffic. This allows for what is known as \"scale-to-zero\" functionality on CPUs and GPUs for efficient resource utilization.\n",
     "\n",
-    "KServe is not a standalone platform but instead core add-on component of **Kubeflow**, specifically addressing the model serving aspect of the ML pipeline. Kubeflow an open-source platform focused on machine learning operations (MLOps) on Kubernetes. It offers a collection of tools that cover the entire ML lifecycle, from model building, training, and deployment to monitoring and management."
+    "KServe is not a standalone platform but instead core add-on component of **Kubeflow**, specifically addressing the model serving aspect of the ML pipeline. Kubeflow is an open-source platform focused on machine learning operations (MLOps) on Kubernetes. It offers a collection of tools that cover the entire ML lifecycle, from model building, training, and deployment to monitoring and management."
    ]
   },
   {
@@ -220,13 +220,13 @@
     "from kubernetes import client \n",
     "from kubernetes.client import V1EnvVar\n",
     "from kubernetes.client.models import V1ObjectMeta\n",
-    "from kserve import KServeClient\n",
-    "from kserve import constants\n",
-    "from kserve import utils\n",
-    "from kserve import V1beta1InferenceService\n",
-    "from kserve import V1beta1InferenceServiceSpec\n",
-    "from kserve import V1beta1PredictorSpec\n",
-    "from kserve import V1beta1TFServingSpec\n",
+    "from KServe import KServeClient\n",
+    "from KServe import constants\n",
+    "from KServe import utils\n",
+    "from KServe import V1beta1InferenceService\n",
+    "from KServe import V1beta1InferenceServiceSpec\n",
+    "from KServe import V1beta1PredictorSpec\n",
+    "from KServe import V1beta1TFServingSpec\n",
     "import urllib3\n",
     "import mlflow\n",
     "import requests\n",
@@ -318,9 +318,9 @@
    "source": [
     "### Create the InferenceService config file (YAML)\n",
     "\n",
-    "Next, we'll create the configuration file (YAML) that tells Kserve to serve our model as an **InferenceService**. An InferenceService is a Kubernetes Custom Resource (CR) provided by Kserve. In the context of Kserve, an InferenceService represents a scalable and load-balanced service that hosts one or more machine learning models for real-time inference or prediction.\n",
+    "Next, we'll create the configuration file (YAML) that tells KServe to serve our model as an **InferenceService**. An InferenceService is a Kubernetes Custom Resource (CR) provided by KServe. In the context of KServe, an InferenceService represents a scalable and load-balanced service that hosts one or more machine learning models for real-time inference or prediction.\n",
     "\n",
-    "A YAML file for defining an InferenceService in Kserve typically specifies the configuration for deploying and serving a machine learning model. Like most Kserve YAMLs, our InferenceService YAML will require:\n",
+    "A YAML file for defining an InferenceService in KServe typically specifies the configuration for deploying and serving a machine learning model. Like most KServe YAMLs, our InferenceService YAML will require:\n",
     "\n",
     "- `apiVersion` and `kind` to specify the Kubernetes API version and kind of resource being defined, respectively.\n",
     "- `metadata` to provide metadata, such as the name of the InferenceService.\n",
@@ -344,11 +344,11 @@
    "source": [
     "# Set paramentes\n",
     "isvc_name = experiment_name\n",
-    "secret_name = 's3-proxy-kserve-secret'\n",
-    "sa_name = 's3-proxy-kserve-sa'\n",
+    "secret_name = 's3-proxy-KServe-secret'\n",
+    "sa_name = 's3-proxy-KServe-sa'\n",
     "\n",
     "#Set name of YAML file\n",
-    "yaml_name = './model-kserve.yaml'"
+    "yaml_name = './model-KServe.yaml'"
    ]
   },
   {
@@ -368,11 +368,11 @@
     "metadata:\n",
     "  name: \"{secret_name}\"\n",
     "  annotations:\n",
-    "    serving.kserve.io/s3-cabundle: \"\"\n",
-    "    serving.kserve.io/s3-endpoint: \"local-s3-service.ezdata-system.svc.cluster.local:30000/\"\n",
-    "    serving.kserve.io/s3-useanoncredential: \"false\"\n",
-    "    serving.kserve.io/s3-usehttps: \"0\"\n",
-    "    serving.kserve.io/s3-verifyssl: \"0\"\n",
+    "    serving.KServe.io/s3-cabundle: \"\"\n",
+    "    serving.KServe.io/s3-endpoint: \"local-s3-service.ezdata-system.svc.cluster.local:30000/\"\n",
+    "    serving.KServe.io/s3-useanoncredential: \"false\"\n",
+    "    serving.KServe.io/s3-usehttps: \"0\"\n",
+    "    serving.KServe.io/s3-verifyssl: \"0\"\n",
     "stringData:\n",
     "  AWS_ACCESS_KEY_ID: \"{os.environ['AUTH_TOKEN']}\"\n",
     "  AWS_SECRET_ACCESS_KEY: \"s3\"\n",
@@ -387,7 +387,7 @@
     "  - name: \"access-token\"\n",
     "\n",
     "---\n",
-    "apiVersion: serving.kserve.io/v1beta1\n",
+    "apiVersion: serving.KServe.io/v1beta1\n",
     "kind: InferenceService\n",
     "metadata:\n",
     "  name: \"{isvc_name}\"\n",
@@ -445,8 +445,8 @@
    "outputs": [],
    "source": [
     "# Wait until the ISvc is ready\n",
-    "kserve_client = KServeClient()\n",
-    "kserve_client.wait_isvc_ready(isvc_name, watch=True, timeout_seconds=120)\n",
+    "KServe_client = KServeClient()\n",
+    "KServe_client.wait_isvc_ready(isvc_name, watch=True, timeout_seconds=120)\n",
     "print(f\"\\nInferenceService {isvc_name} is ready.\")"
    ]
   },
@@ -475,7 +475,7 @@
     "1. In the sidebar navigation menu, select `Data Science` > `Model Serving`.\n",
     "1. The **Kubeflow Endpoints** pane will open in a new tab.\n",
     "\n",
-    "Here, we will see the complete list of applications (in our case, an InferenceService instance) currently being served using Kserve."
+    "Here, we will see the complete list of applications (in our case, an InferenceService instance) currently being served using KServe."
    ]
   },
   {
@@ -485,7 +485,7 @@
     "tags": []
    },
    "source": [
-    "<img src=\"./images/exercise6/kserve1.png\" alt=\"Drawing\" style=\"width: 90%;\"/>"
+    "<img src=\"./images/exercise6/KServe1.png\" alt=\"Drawing\" style=\"width: 90%;\"/>"
    ]
   },
   {
@@ -510,7 +510,7 @@
     "tags": []
    },
    "source": [
-    "<img src=\"./images/exercise6/kserve2.png\" alt=\"Drawing\" style=\"width: 70%;\"/>"
+    "<img src=\"./images/exercise6/KServe2.png\" alt=\"Drawing\" style=\"width: 70%;\"/>"
    ]
   },
   {
@@ -538,14 +538,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7a8ba023-4a1a-4ece-896b-efe47cb76f33",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "internal_url = \"http://retail-experiment-predictor.ezmeral.svc.cluster.local\" #paste the URL internal endpoint for your model here"
+    "internal_url = \"\" #paste the URL internal endpoint for your model here"
    ]
   },
   {
@@ -768,7 +768,7 @@
     "tags": []
    },
    "source": [
-    "Did the model correctly guess what was in your image? If so, great! If not... still great! We've successfully validated that our model is being served with an endpoint using Kserve!"
+    "Did the model correctly guess what was in your image? If so, great! If not... still great! We've successfully validated that our model is being served with an endpoint using KServe!"
    ]
   },
   {
