--- a/demos/smart-retail/01.exploring_data_with_spark.ipynb
+++ b/demos/smart-retail/01.exploring_data_with_spark.ipynb
@@ -279,11 +279,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "087bdc8e-44d1-48ab-9471-cccb2b875e63",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "file_root = \"file:///mounts/shared-volume/user/data\"\n",
-    "delta_root = \"file:///mounts/shared-volume/shared/retail-delta/data/\""
+    "file_root = \"file:///mounts/shared-volume/shared/retail-data/raw-data\"\n",
+    "delta_root = \"file:///mounts/shared-volume/shared/retail-data/delta-tables/\""
    ]
   },
   {
@@ -692,7 +694,7 @@
    },
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "For the smoothest experience, remove all previous versions of Delta Tables that may exist from previous runnings of this exercise.<br><br> Open a <b> Terminal </b> window and run: <i>rm -r /mnt/shared/retail-delta<i>\n",
+    "For the smoothest experience, remove all previous versions of Delta Tables that may exist from previous runnings of this exercise.<br><br> Open a <b> Terminal </b> window and run: <i>rm -r /mnt/shared/retail-data<i>\n",
     "</div>"
    ]
   },
